Bug 183427. Re-anable Windows GDI AlphaBlending. r=smontagu, sr=kin